test_suite/tests/ui/borrow/empty_lifetimes.stderr
error: at least one lifetime must be borrowed
 --> $DIR/empty_lifetimes.rs:6:22
  |
6 |     #[serde(borrow = "")]
  |                      ^^

error: aborting due to previous error

